--- a/TESTCODE/TESTCODE/TESTCODE.vcxproj
+++ b/TESTCODE/TESTCODE/TESTCODE.vcxproj
@@ -129,6 +129,9 @@
   <ItemGroup>
     <ClCompile Include="TEST.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="RingMemory.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
